unpackaged/main/default/objects/Escalamiento__c/Escalamiento__c.object-meta.xml
<CustomObject>
    <label>Escalamiento</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>No. de Escalamiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>