unpackaged/main/default/objects/Escalamiento__c/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1. Corto circuito</fullName>
            </value>
            <value>
                <fullName>A2. Obstrucción</fullName>
            </value>
            <value>
                <fullName>A3. Falta cableado</fullName>
            </value>
            <value>
                <fullName>A4. Falta Accesorio</fullName>
            </value>
            <value>
                <fullName>A5. Falta guía CFE</fullName>
            </value>
            <value>
                <fullName>A6. Falta Guía TV-Cable</fullName>
            </value>
            <value>
                <fullName>A7. Accesorio Dañado y/o Sin Energia</fullName>
            </value>
            <value>
                <fullName>A8. Accesorio mal instalado</fullName>
            </value>
            <value>
                <fullName>A9. Variacion de Voltaje</fullName>
            </value>
            <value>
                <fullName>A10. Filtración por Ductos</fullName>
            </value>
            <value>
                <fullName>A11. Ducto tapado</fullName>
            </value>
            <value>
                <fullName>A12. Otro</fullName>
            </value>
            <value>
                <fullName>B1. Instalación Tapada</fullName>
            </value>
            <value>
                <fullName>B2. Falta de conexión</fullName>
            </value>
            <value>
                <fullName>B3. Fugas</fullName>
            </value>
            <value>
                <fullName>B4. Mala Instalacion</fullName>
            </value>
            <value>
                <fullName>B5. Dañado</fullName>
            </value>
            <value>
                <fullName>B6. Faltante</fullName>
            </value>
            <value>
                <fullName>B7. Humedad en Muro / Losa</fullName>
            </value>
            <value>
                <fullName>B8. Humedad en Pluvial</fullName>
            </value>
            <value>
                <fullName>B9. Otros</fullName>
            </value>
            <value>
                <fullName>C1. Tapado</fullName>
            </value>
            <value>
                <fullName>C2. Falta de Conexión</fullName>
            </value>
            <value>
                <fullName>C3. Fuga</fullName>
            </value>
            <value>
                <fullName>C4. Mala Instalacion</fullName>
            </value>
            <value>
                <fullName>C5. Dañado</fullName>
            </value>
            <value>
                <fullName>C6. Faltante</fullName>
            </value>
            <value>
                <fullName>C7. Falta de Presion</fullName>
            </value>
            <value>
                <fullName>C8. Falta de Suministro Agua</fullName>
            </value>
            <value>
                <fullName>C9. Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>