unpackaged/main/default/objects/Escalamiento__c/fields/CorreoEsc1__c.field-meta.xml
<CustomField>
    <fullName>CorreoEsc1__c</fullName>
    <label>Correo Escalamiento 1</label>
    <type>Email</type>
</CustomField>