unpackaged/main/default/objects/Escalamiento__c/fields/CorreoEsc2__c.field-meta.xml
<CustomField>
    <fullName>CorreoEsc2__c</fullName>
    <label>Correo Escalamiento 2</label>
    <type>Email</type>
</CustomField>