unpackaged/main/default/objects/Escalamiento__c/fields/CorreoEsc3__c.field-meta.xml
<CustomField>
    <fullName>CorreoEsc3__c</fullName>
    <label>Correo Escalamiento 3</label>
    <type>Email</type>
</CustomField>