unpackaged/main/default/objects/Escalamiento__c/fields/DiasEsc1__c.field-meta.xml
<CustomField>
    <fullName>DiasEsc1__c</fullName>
    <label>Días de Escalamiento 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>