unpackaged/main/default/objects/Escalamiento__c/fields/DiasEsc2__c.field-meta.xml
<CustomField>
    <fullName>DiasEsc2__c</fullName>
    <label>Días de Escalamiento 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>