unpackaged/main/default/objects/Escalamiento__c/fields/DiasEsc3__c.field-meta.xml
<CustomField>
    <fullName>DiasEsc3__c</fullName>
    <label>Días de Escalamiento 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>