unpackaged/main/default/objects/Escalamiento__c/fields/Escalamiento1__c.field-meta.xml
<CustomField>
    <fullName>Escalamiento1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalamiento 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalamientos5</relationshipName>
    <type>Lookup</type>
</CustomField>