unpackaged/main/default/objects/Escalamiento__c/fields/Escalamiento2__c.field-meta.xml
<CustomField>
    <fullName>Escalamiento2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalamiento 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalamientos</relationshipName>
    <type>Lookup</type>
</CustomField>