unpackaged/main/default/objects/Escalamiento__c/fields/Escalamiento3__c.field-meta.xml
<CustomField>
    <fullName>Escalamiento3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalamiento 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalamientos4</relationshipName>
    <type>Lookup</type>
</CustomField>