unpackaged/main/default/objects/Escalamiento__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Escalamientos</relationshipLabel>
    <relationshipName>Escalamientos</relationshipName>
    <type>Lookup</type>
</CustomField>