unpackaged/main/default/objects/Escalamiento__c/fields/TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>TipoServicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantías</fullName>
            </value>
            <value>
                <fullName>Peticiones</fullName>
            </value>
            <value>
                <fullName>Faltantes</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
            <value>
                <fullName>Seguimiento proceso de venta</fullName>
            </value>
            <value>
                <fullName>Cobranza Post Venta</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>